--- a/Semana2/Dia1/01-blog.html
+++ b/Semana2/Dia1/01-blog.html
@@ -35,7 +35,51 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni sit laboriosam quaerat molestias at tempora quidem voluptates optio recusandae perferendis accusantium, amet reiciendis deleniti placeat? Id, unde optio. Molestiae, tempora.
           </p>
         </article>
+        <!-- Hagan un article pero que sea para Cusco, si sale rápido hagan un par mas xfas :D-->
+        <article>
+          <h3>Cusco</h3>
+          <small>Ciudad Imperial</small>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, iusto officiis asperiores, voluptate reiciendis, temporibus cumque voluptas exercitationem placeat illo dicta est quidem culpa a fuga officia corporis. Ipsum, provident!</p>
+        </article>
+      </section>
+
+      <section>
+        <h2>Ubicación - Perú en el mundo</h2>
+        <p>
+          Latitud y longitud
+          <br>
+          America del Sur por el centro
+          <br>
+          Ubica Estados Unidos y vas bien para abajo bien, y encontrarás America del Sur y por el medio al oeste esta Perú
+        </p>
+      </section>
+
+      <section>
+        <h2>Lima</h2>
+        <pre>
+          Al centro del País por la costa
+
+                La capital
+
+          La ciudad de los reyes
+
+          La ciudad bohemia
+
+          La ciudad donde se reunen todas las culturas
+        </pre>
       </section>
     </main>
+    <footer>
+      <h2>Más etiquetas</h2>
+      <code>
+        var nombre = "Marcos"
+      </code>
+      <br>
+      <cite>Marquez, G. (1975) El amor en los tiempos del cólera</cite>
+      <br>
+      <time>20:18 pm</time>
+      <br>
+      <span>Texto aleatorio</span>
+    </footer>
   </body>
 </html>
