--- a/Semana2/Dia2/02-tablas.html
+++ b/Semana2/Dia2/02-tablas.html
@@ -12,7 +12,7 @@
   <main>
     <section>
       <table border="1">
-        <caption>Alumnos</caption>
+        <caption>Tabla Alumnos</caption>
         <thead>
           <tr>
             <th>
@@ -27,6 +27,9 @@
             <th>
               Ciudad
             </th>
+            <th>
+              Hobbies
+            </th>
           </tr>
         </thead>
         <tbody>
@@ -35,6 +38,7 @@
             <td>Perez</td>
             <td>24</td>
             <td>Arequipa</td>
+            <td rowspan="2">Escuchar Música</td>
           </tr>
           <tr>
             <td>Maria</td>
@@ -42,7 +46,33 @@
             <td>29</td>
             <td>Lima</td>
           </tr>
+          <tr>
+            <td>Lucia</td>
+            <td>Jaen</td>
+            <td>32</td>
+            <td>Cusco</td>
+            <td>Programar</td>
+          </tr>
         </tbody>
+        <tfoot>
+          <tr>
+            <!-- <td>Nombres</td>
+            <td>Apellidos</td>
+            <td>Edad</td>
+            <td>Ciudad</td> -->
+            <td colspan="5">No hay mas alumnos</td>
+          </tr>
+        </tfoot>
+      </table>
+      <hr>
+      <table border="1">
+        <thead>
+          <tr>
+            <th>
+              Algo
+            </th>
+          </tr>
+        </thead>
       </table>
     </section>
   </main>
