--- a/Semana2/Dia2/03-schema.html
+++ b/Semana2/Dia2/03-schema.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Web acerca de codigo">
   <meta name="keywords" content="codigo, html5, css, tecsup, arequipa">
+  <!-- meta -->
   <title>Document</title>
 </head>
 <body>
