--- a/Semana2/Dia3/01-css.html
+++ b/Semana2/Dia3/01-css.html
@@ -10,7 +10,14 @@
       color:cornflowerblue;
       font-family:Arial;
     }
+    h2{
+      color:purple;
+    }
   </style>
+
+  <!-- Esta es la 3ra manera, me permite reutilizar esta hoja de estilos en varios documentos HTML -->
+  <link rel="stylesheet" href="./01-css.css">
+
 </head>
 <body>
   <header>
@@ -37,6 +44,7 @@
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptatem minima blanditiis, molestiae veniam ipsam eum recusandae sint reprehenderit praesentium doloremque obcaecati earum ipsa ea. Obcaecati dolor officiis dicta harum?
     </p>
+    Hola son otro texto adicional
   </footer>
 </body>
 </html>
