--- a/Semana2/Dia3/03-referencias.html
+++ b/Semana2/Dia3/03-referencias.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./03-referencias.css">
+  <!-- hoja de estilo 2 -->
+  <!-- Hoja de estilo 3 -->
 </head>
 <body>
   <header>
@@ -77,5 +79,62 @@
 
   <p>párrafo externo 1</p>
   <p>párrafo externo 2</p>
+
+  <hr>
+
+  <section class="noticias">
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo commodi, suscipit odit perferendis voluptates tenetur quisquam voluptas est sed! Pariatur ea tenetur quisquam quasi libero non adipisci optio laborum quos?
+    </p>
+    <p>
+      Natus non ex, fuga quia perspiciatis ea fugit error. Quae necessitatibus magnam minima quasi nobis nulla libero quibusdam, optio corrupti incidunt maxime saepe dignissimos mollitia omnis, tempore nam sapiente asperiores.
+    </p>
+    <p>
+      Earum ratione quae commodi optio odit quos, culpa velit at sapiente! Commodi obcaecati cumque cupiditate dolores temporibus libero, veniam asperiores perspiciatis aliquam, error nisi ut nostrum tempore blanditiis! Nobis, rem.
+    </p>
+  </section>
+
+  <table border="1">
+    <thead>
+      <tr>
+        <th>Peliculas</th>
+        <th>Año</th>
+        <th>Género</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Interstellar</td>
+        <td>2010</td>
+        <td>Ciencia Ficción</td>
+      </tr>
+      <tr>
+        <td>Tren a Busan 2</td>
+        <td>2014</td>
+        <td>Horror</td>
+      </tr>
+      <tr>
+        <td>La mosca</td>
+        <td>1992</td>
+        <td>Horror</td>
+      </tr>
+      <tr>
+        <td>Alien</td>
+        <td>1986</td>
+        <td>Ficción Horror</td>
+      </tr>
+      <tr>
+        <td>Frozen 2</td>
+        <td>2016</td>
+        <td>Animada</td>
+      </tr>
+      <tr>
+        <td>El teléfono</td>
+        <td>2019</td>
+        <td>Suspenso</td>
+      </tr>
+    </tbody>
+  </table>
+
 </body>
 </html>
