--- a/Semana3/Dia1/04-flexbox.html
+++ b/Semana3/Dia1/04-flexbox.html
@@ -7,22 +7,37 @@
   <style>
     .papa{
       width:100%;
+      height:500px;
       border:1px solid red;
       display:flex;
-      justify-content: space-around;
+      /* center, flex-end, space-around, space-evenly, space-between*/
+      justify-content: space-evenly;
+      flex-direction:row;
+      align-items:center;
+      flex-wrap:wrap;
     }
     .hijo{
       width:100px;
       height:100px;
       border:1px solid blue;
     }
+
+    .caja1{
+      align-self: flex-end;
+    }
   </style>
 </head>
 <body>
   <div class="papa">
+    <div class="hijo caja1">hijo</div>
     <div class="hijo">hijo</div>
     <div class="hijo">hijo</div>
     <div class="hijo">hijo</div>
+    <div class="hijo">hijo</div>
+    <div class="hijo">hijo</div>
+    <div class="hijo">hijo</div>
+    <div class="hijo">hijo</div>
+    <div class="hijo caja9">hijo</div>
   </div>
 </body>
 </html>
