--- a/Semana3/Dia1/05-menuflex.html
+++ b/Semana3/Dia1/05-menuflex.html
@@ -6,39 +6,37 @@
   <title>Document</title>
   <style>
     *{
-      border:0;
+      margin:0;
       padding:0;
       box-sizing: border-box;
-      /* border:1px solid red; */
-      font-family: Arial;
+      /* propiedad temporal */
+      border:1px solid red;
     }
+
+    body{
+      background: #37517E;
+    }
+
     .contenedor{
-      width: 900px;
-      /* margin:arribaabajo loscostados */
+      width:1200px;
+      /* aqui centro de forma horizontal */
       margin:0 auto;
     }
+
     ul{
       display:flex;
-      width:500px;
-      justify-content: space-around;
     }
+
     li{
       list-style-type: none;
-      padding:5px;
     }
+
     nav{
       display:flex;
       justify-content: space-between;
-      background:steelblue;
+      padding: 20px 0;
       color:white;
     }
-    ul>li:nth-child(5){
-      border:2px solid skyblue;
-      border-radius:10px;
-    }
-
-
-
 
   </style>
 </head>
