--- a/Semana3/Dia1/05-menuflex.html
+++ b/Semana3/Dia1/05-menuflex.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap" rel="stylesheet"> 
   <style>
     *{
       margin:0;
@@ -23,12 +25,18 @@
       margin:0 auto;
     }
 
+    .logo{
+      font-family: 'Cabin', sans-serif;
+      font-size:32px;
+    }
+
     ul{
       display:flex;
     }
 
     li{
       list-style-type: none;
+      font-family: Arial, Helvetica, sans-serif;
     }
 
     nav{
@@ -44,7 +52,7 @@
   <div class="contenedor">
     <nav>
       <div class="logo">
-        LOGO
+        ARSHA
       </div>
       <div class="menu">
         <ul>
