--- a/Semana3/Dia1/05-menuflex.html
+++ b/Semana3/Dia1/05-menuflex.html
@@ -12,7 +12,6 @@
       padding:0;
       box-sizing: border-box;
       /* propiedad temporal */
-      border:1px solid red;
     }
 
     body{
@@ -32,11 +31,24 @@
 
     ul{
       display:flex;
+      width:500px;
+      justify-content: space-around;
     }
 
     li{
       list-style-type: none;
       font-family: Arial, Helvetica, sans-serif;
+      padding:10px;
+    }
+    /* hover, va a aplicar cuando el mouse este por encima */
+    li:hover{
+      color:#46ACDF;
+      cursor:pointer;
+    }
+
+    ul>li:nth-child(5){
+      border:2px solid #46ACDF;
+      border-radius:15px;
     }
 
     nav{
@@ -56,7 +68,7 @@
       </div>
       <div class="menu">
         <ul>
-          <li>Link1</li>
+          <li>Get Started</li>
           <li>Link2</li>
           <li>Link3</li>
           <li>Link4</li>
