--- a/Semana4/Dia2/03-galeria.html
+++ b/Semana4/Dia2/03-galeria.html
@@ -16,6 +16,7 @@
     <div class="caja">6</div>
     <div class="caja">7</div>
     <div class="caja">8</div>
+    <div class="caja">9</div>
   </div>
 </body>
 </html>
