--- a/Semana4/Dia3/card.html
+++ b/Semana4/Dia3/card.html
@@ -9,7 +9,112 @@
 <body>
   <header></header>
   <main class="cards">
-
+    <!-- card -->
+    <div class="card">
+      <div class="card_imagen">
+        <img src="https://picsum.photos/400" alt="img card">
+        <p class="card_fotos">Fotos</p>
+        <p class="card_fecha">
+          08 <br/>
+          <span>JAN</span>
+        </p>
+      </div>
+      <!-- ------ -->
+      <div class="card_info">
+        <h2>Conoce al gato</h2>
+        <h3 class="card_subtitulo">
+          Este gato es genial
+        </h3>
+        <p class="card_descripcion">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aspernatur est quos sint vero enim, molestias ut rem nihil maiores quidem odit eos quod recusandae deleniti praesentium quis, fuga quae!
+        </p>
+      </div>
+    </div>
+    <!-- card -->
+    <div class="card">
+      <div class="card_imagen">
+        <img src="https://picsum.photos/400" alt="img card">
+        <p class="card_fotos">Fotos</p>
+        <p class="card_fecha">
+          08 <br/>
+          <span>JAN</span>
+        </p>
+      </div>
+      <!-- ------ -->
+      <div class="card_info">
+        <h2>Conoce al gato</h2>
+        <h3 class="card_subtitulo">
+          Este gato es genial
+        </h3>
+        <p class="card_descripcion">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aspernatur est quos sint vero enim, molestias ut rem nihil maiores quidem odit eos quod recusandae deleniti praesentium quis, fuga quae!
+        </p>
+      </div>
+    </div>
+    <!-- card -->
+    <div class="card">
+      <div class="card_imagen">
+        <img src="https://picsum.photos/400" alt="img card">
+        <p class="card_fotos">Fotos</p>
+        <p class="card_fecha">
+          08 <br/>
+          <span>JAN</span>
+        </p>
+      </div>
+      <!-- ------ -->
+      <div class="card_info">
+        <h2>Conoce al gato</h2>
+        <h3 class="card_subtitulo">
+          Este gato es genial
+        </h3>
+        <p class="card_descripcion">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aspernatur est quos sint vero enim, molestias ut rem nihil maiores quidem odit eos quod recusandae deleniti praesentium quis, fuga quae!
+        </p>
+      </div>
+    </div>
+    <!-- card -->
+    <div class="card">
+      <div class="card_imagen">
+        <img src="https://picsum.photos/400" alt="img card">
+        <p class="card_fotos">Fotos</p>
+        <p class="card_fecha">
+          08 <br/>
+          <span>JAN</span>
+        </p>
+      </div>
+      <!-- ------ -->
+      <div class="card_info">
+        <h2>Conoce al gato</h2>
+        <h3 class="card_subtitulo">
+          Este gato es genial
+        </h3>
+        <p class="card_descripcion">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aspernatur est quos sint vero enim, molestias ut rem nihil maiores quidem odit eos quod recusandae deleniti praesentium quis, fuga quae!
+        </p>
+      </div>
+    </div>
+    <!-- card -->
+    <div class="card">
+      <div class="card_imagen">
+        <img src="https://picsum.photos/400" alt="img card">
+        <p class="card_fotos">Fotos</p>
+        <p class="card_fecha">
+          08 <br/>
+          <span>JAN</span>
+        </p>
+      </div>
+      <!-- ------ -->
+      <div class="card_info">
+        <h2>Conoce al gato</h2>
+        <h3 class="card_subtitulo">
+          Este gato es genial
+        </h3>
+        <p class="card_descripcion">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aspernatur est quos sint vero enim, molestias ut rem nihil maiores quidem odit eos quod recusandae deleniti praesentium quis, fuga quae!
+        </p>
+      </div>
+    </div>
+    <!-- card -->
     <div class="card">
       <div class="card_imagen">
         <img src="https://picsum.photos/400" alt="img card">
