--- a/Semana5/Dia1/index.html
+++ b/Semana5/Dia1/index.html
@@ -10,7 +10,9 @@
   <!-- <script src="./01-introjavascript.js"></script> -->
   <!-- <script src="./02-operadoresaritmeticos.js"></script> -->
   <!-- <script src="03-operacionesreducidas.js"></script> -->
-  <script src="04-tiposdedatos.js">
-  </script>
+  <!-- <script src="04-tiposdedatos.js">
+  </script> -->
+  <!-- <script src="05-area.js"></script> -->
+  <script src="06-funciones.js"></script>
 </body>
 </html>
