--- a/Semana5/Dia1/index.html
+++ b/Semana5/Dia1/index.html
@@ -13,6 +13,7 @@
   <!-- <script src="04-tiposdedatos.js">
   </script> -->
   <!-- <script src="05-area.js"></script> -->
-  <script src="06-funciones.js"></script>
+  <!-- <script src="06-funciones.js"></script> -->
+  <script src="07-ejercicio.js"></script>
 </body>
 </html>
