--- a/Semana5/Dia2/index.html
+++ b/Semana5/Dia2/index.html
@@ -8,6 +8,10 @@
 <body>
   
   <!-- <script src="01-arreglos.js"></script> -->
-  <script src="02-condicionales.js"></script>
+  <!-- <script src="02-condicionales.js"></script> -->
+  <!-- <script src="03-switch.js"></script> -->
+  <!-- <script src="04-ternario.js"></script> -->
+  <!-- <script src="05-repetitivas.js"></script> -->
+  <script src="06-for.js"></script>
 </body>
 </html>
