--- a/Semana5/Dia2/index.html
+++ b/Semana5/Dia2/index.html
@@ -12,6 +12,8 @@
   <!-- <script src="03-switch.js"></script> -->
   <!-- <script src="04-ternario.js"></script> -->
   <!-- <script src="05-repetitivas.js"></script> -->
-  <script src="06-for.js"></script>
+  <!-- <script src="06-for.js"></script> -->
+  <script src="07-objetos.js"></script>
+  <!-- <script src="08-ciudadano.js"></script> -->
 </body>
 </html>
