--- a/Semana5/Dia3/index.html
+++ b/Semana5/Dia3/index.html
@@ -10,6 +10,8 @@
 
   <!-- antes de la etiqueta de cierre del body -->
   <!-- <script src="01-repasoobjetos.js"></script> -->
-  <script src="02-objetosestandar.js"></script>
+  <!-- <script src="02-objetosestandar.js"></script> -->
+  <!-- <script src="03-Math.js"></script> -->
+  <script src="04-string.js"></script>
 </body>
 </html>
