--- a/Semana5/Dia3/index.html
+++ b/Semana5/Dia3/index.html
@@ -13,6 +13,7 @@
   <!-- <script src="02-objetosestandar.js"></script> -->
   <!-- <script src="03-Math.js"></script> -->
   <!-- <script src="04-string.js"></script> -->
-  <script src="./05-ejercicios.js"></script>
+  <!-- <script src="./05-ejercicios.js"></script> -->
+  <script src="06-ejercicio5.js"></script>
 </body>
 </html>
