--- a/Semana6/Día1/03-element.html
+++ b/Semana6/Día1/03-element.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header>
-    <h1>Mi Título</h1>
+    <h1 id="titulo">Mi Título</h1>
   </header>
   <main class="contenedor">
     <p>
@@ -29,6 +29,9 @@
     </p>
   </main> 
 
+  <div id="cajavacia">
+    
+  </div>
   <script src="03-element.js"></script>
 </body>
 </html>
