--- a/Semana6/Dia2/02-guardarObjeto.html
+++ b/Semana6/Dia2/02-guardarObjeto.html
@@ -20,6 +20,8 @@
     <br>
     <input type="submit" value="Guardar Usuario">
   </form>
+  <br>
+  <button id="verusuario">Ver Usuario Guardado</button>
   <script src="02-guardarObjeto.js"></script>
 </body>
 </html>
