--- a/Semana6/Dia3/index.html
+++ b/Semana6/Dia3/index.html
@@ -4,9 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+  <header>
+    Aplicación de Pedidos
+  </header>
+  <main>
+    <div id="divplatillos">
+
+    </div>
+  </main>
 
   <script src="script.js"></script>
 </body>
