--- a/Semana7/01_Refuerzo/index.html
+++ b/Semana7/01_Refuerzo/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="./styles.css" /> -->
+    <link rel="stylesheet" href="./styles.css" />
     <title>Document</title>
   </head>
   <body>
@@ -13,6 +13,6 @@
       <div id="divcarrito"></div>
     </div>
     <script src="platillos.js"></script>
-    <!-- <script src="scripts.js"></script> -->
+    <script src="scripts.js"></script>
   </body>
 </html>
