--- a/Semana7/Dia1/04-componentes.html
+++ b/Semana7/Dia1/04-componentes.html
@@ -26,7 +26,7 @@
         <div class="col-6">
           <h3><code>class="btn btn-primary"</code></h3>
           <h5>
-            Podemos adicionar clases a la clase principal que es btn btn-[color] para colorear los botones de bootstrap
+            Podemos adicionar clases a la clase principal que es btn btn-[color] para colorear los botones de bootstrap, aparte podemos añadir diferentes clases para cambiar su apariencia
           </h5>
           <button class="btn btn-primary">
             Botón Primario
@@ -40,6 +40,19 @@
           <button class="btn btn-danger">
             Botón de Peligrooo!!!
           </button>
+          <!-- sm - lg -->
+          <button class="btn btn-primary btn-sm">
+            Botón sm
+          </button>
+          <button class="btn btn-warning btn-lg">
+            Botón lg
+          </button>
+          <!-- block -->
+         <div class="d-grid">
+           <button class="btn btn-success">
+             Botón block con grid
+           </button>
+         </div>
         </div>
       </div>
 
