--- a/Semana7/Dia2/02-tablas.html
+++ b/Semana7/Dia2/02-tablas.html
@@ -71,13 +71,39 @@
         <div class="col-8">
           <table class="table table-striped">
             <thead>
-              <tr>
-                <td>Cabecera 01</td>
-                <td>Cabecera 02</td>
-                <td>Cabecera 03</td>
-                <td>Cabecera 04</td>
-              </tr>
+             <tr>
+               <th>Cabecera 01</th>
+               <th>Cabecera 02</th>
+               <th>Cabecera 03</th>
+               <th>Cabecera 04</th>
+             </tr>
             </thead>
+            <tbody>
+              <tr>
+                <td>Contenido 01</td>
+                <td>Contenido 02</td>
+                <td>Contenido 03</td>
+                <td>Contenido 04</td>
+              </tr>
+              <tr>
+                <td>Contenido 01</td>
+                <td>Contenido 02</td>
+                <td>Contenido 03</td>
+                <td>Contenido 04</td>
+              </tr>
+              <tr>
+                <td>Contenido 01</td>
+                <td>Contenido 02</td>
+                <td>Contenido 03</td>
+                <td>Contenido 04</td>
+              </tr>
+              <tr>
+                <td>Contenido 01</td>
+                <td>Contenido 02</td>
+                <td>Contenido 03</td>
+                <td>Contenido 04</td>
+              </tr>
+            </tbody>
           </table>
         </div>
       </div>
