--- a/Semana8/Dia1/index.html
+++ b/Semana8/Dia1/index.html
@@ -8,6 +8,7 @@
 <body>
   
   <!-- <script src="01-letyconst.js"></script> -->
-  <script src="02-classes.js"></script>
+  <!-- <script src="02-classes.js"></script> -->
+  <script src="03-masclasses.js"></script>
 </body>
 </html>
