--- a/Semana8/Dia1/index.html
+++ b/Semana8/Dia1/index.html
@@ -9,6 +9,8 @@
   
   <!-- <script src="01-letyconst.js"></script> -->
   <!-- <script src="02-classes.js"></script> -->
-  <script src="03-masclasses.js"></script>
+  <!-- <script src="03-masclasses.js"></script> -->
+  <!-- <script src="04-funcionflecha.js"></script> -->
+  <script src="05-destructuracion.js"></script>
 </body>
 </html>
