--- a/Semana8/Dia2/index.html
+++ b/Semana8/Dia2/index.html
@@ -8,6 +8,8 @@
 <body>
   
 
-  <script src="01-callbacks.js"></script>
+  <!-- <script src="01-callbacks.js"></script> -->
+  <!-- <script src="02-promesas.js"></script> -->
+  <script src="03-promesas2.js"></script>
 </body>
 </html>
