--- a/Semana8/Dia2/index.html
+++ b/Semana8/Dia2/index.html
@@ -11,6 +11,7 @@
   <!-- <script src="01-callbacks.js"></script> -->
   <!-- <script src="02-promesas.js"></script> -->
   <!-- <script src="03-promesas2.js"></script> -->
-  <script src="04-fetch.js"></script>
+  <!-- <script src="04-fetch.js"></script> -->
+  <script src="05-asyncawait.js"></script>
 </body>
 </html>
