--- a/Semana8/proyectito/index.html
+++ b/Semana8/proyectito/index.html
@@ -31,11 +31,28 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <p>Contenido</p>
+          <form id="formcrearproducto">
+            <div class="form-group">
+              <label>Nombre</label>
+              <input type="text" class="form-control" name="producto_nombre">
+            </div>
+            <div class="form-group">
+              <label>Descripción</label>
+              <input type="text" class="form-control" name="producto_descripcion">
+            </div>
+            <div class="form-group">
+              <label>Precio</label>
+              <input type="number" class="form-control" name="producto_precio">
+            </div>
+            <div class="form-group">
+              <label>Imagen</label>
+              <input type="text" class="form-control" name="producto_imagen">
+            </div>
+          </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-          <button type="button" class="btn btn-primary">Guardar</button>
+          <button type="button" class="btn btn-primary" id="btnGuardar">Guardar</button>
         </div>
       </div>
     </div>
